without-tls/rabbitmq/ingress.yaml
# Base source: rabbitmq/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "rabbit-cluster-rabbitmq"
  labels:
    app: rabbitmq
    chart: rabbitmq-2.2.0
    release: "rabbit-cluster"
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: "/"
    nginx.ingress.kubernetes.io/add-base-url: "true"
spec:
  rules:
  - host: <YOUR_DOMAIN>
    http:
      paths:
        - path: /rabbit-management
          backend:
            serviceName: rabbit-cluster-rabbitmq
            servicePort: 15672
